2008-04-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
	-davContentLength]): the content length should is now based on the
	UTF-8 encoding.

2008-04-22  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxCalendarSelector.m ([UIxCalendarSelector
	-contrastingTextColor]): new method (code taken from Lightning)
	that returns a foreground color easily readible based on the
	brightness of the background color.

	* SoObjects/SOGo/SOGoGCSFolder.m ([SOGoGCSFolder
	-setDavDisplayName:newName]): deny the renaming of the folder if
	not owner.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject
	-davSetProperties:setPropsremovePropertiesNamed:removedPropsinContext:localContext]):
	certain properties should be authorized when not owner.

2008-04-21  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Scheduler/UIxColorPicker.[hm]: new class module that
	implements a javascript-based color picker.

	* UI/Scheduler/UIxCalendarProperties.[hm]: new class module that
	implements the interface for renaming and recoloring the
	calendars.

2008-04-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailPartViewers/UIxMailPartHTMLViewer.m
	([_UIxHTMLMailContentHandler -characters:_charslength:_len])
	([_UIxHTMLMailContentHandler -comment:_charslength:_len]): don't
	cast the unichar data to char, to avoid issues with endianness
	which prevents the CSS from being parsed properly.

	* UI/MailerUI/UIxMailEditor.m ([UIxMailEditor -isMailReply]): new
	method that returns the JS values "true" or "false" as strings is
	the mail has a non-null count of recipients.

2008-04-14  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentFolder.m ([SOGoAppointmentFolder -davCalendarQuery:queryContext])
	([SOGoAppointmentFolder -davCalendarMultiget:queryContext]):
	deduce the cname of objects even if we are using hostless urls.

2008-03-31  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
