@@ -1,5 +1,8 @@
 2008-04-23  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
 
+	* SoObjects/SOGo/SOGoUserFolder.m ([SOGoUserFolder
+	-davResourceType]): we declare self as a "principal".
+
 	* SoObjects/SOGo/SOGoContentObject.m ([SOGoContentObject
 	-davContentLength]): the content length should is now based on the
 	UTF-8 encoding.
